--- a/faq-accordion-main/index.html
+++ b/faq-accordion-main/index.html
@@ -120,7 +120,7 @@
 				href="https://www.frontendmentor.io?ref=challenge"
 				target="_blank"
 				>Frontend Mentor</a
-			>. Coded by <a href="#">Abdullahi Ismail</a>.
+			>. Coded by <a href="https://www.frontendmentor.io/profile/M1RAK">Abdullahi Ismail</a>.
 		</div>
 	</body>
 </html>
