--- a/social-links-profile-main/index.html
+++ b/social-links-profile-main/index.html
@@ -37,7 +37,7 @@
 				href="https://www.frontendmentor.io?ref=challenge"
 				target="_blank"
 				>Frontend Mentor</a
-			>. Coded by <a href="#">Abdullahi Ismail</a>.
+			>. Coded by <a href="https://www.frontendmentor.io/profile/M1RAK">Abdullahi Ismail</a>.
 		</div>
 	</body>
 </html>
