updated styles and README

--- a/results-summary-component-main/index.html
+++ b/results-summary-component-main/index.html
@@ -28,8 +28,7 @@
 				</div>
 				<div class="result-container--right">
 					<h3>Summary</h3>
-					<div class="summary-list">
-					</div>
+					<div class="summary-list"></div>
 					<button>Continue</button>
 				</div>
 			</div>
@@ -48,22 +47,3 @@
 		<script src="./js/app.js"></script>
 	</body>
 </html>
-<!-- 
- 
- 
-  
-  Summary
-
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue -->
