--- a/faq-accordion-main/index.html
+++ b/faq-accordion-main/index.html
@@ -13,12 +13,16 @@
 		<title>Frontend Mentor | FAQ accordion</title>
 	</head>
 	<body>
-		<div class="faq">
+		<main role="main">
+			<div class="faq">
+
 			<div class="faq-header">
 				<img src="./assets/images/icon-star.svg" alt="icon-star" />
 				<h2>FAQs</h2>
 			</div>
+
 			<div class="faq-list">
+
 				<div class="faq-question">
 					<div class="faq-question-header">
 						<h4 class="question">
@@ -111,10 +115,14 @@
 						members.
 					</p>
 				</div>
+				
 			</div>
-		</div>
 
-		<div class="attribution">
+		</div>
+		</main>
+
+		<footer role="contentinfo">
+			<div class="attribution">
 			Challenge by
 			<a
 				href="https://www.frontendmentor.io?ref=challenge"
@@ -122,5 +130,6 @@
 				>Frontend Mentor</a
 			>. Coded by <a href="https://www.frontendmentor.io/profile/M1RAK">Abdullahi Ismail</a>.
 		</div>
+		</footer>
 	</body>
 </html>
