--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -13,36 +13,44 @@
 		<title>Frontend Mentor | Interactive rating component</title>
 	</head>
 	<body>
-		<div class="card">
-			<!-- Active State -->
-			<div class="card-logo">
-				<img src="./images/icon-star.svg" alt="icon-star" />
+		<main role="main">
+			<div class="card">
+				<!-- Active State -->
+				<div class="card-logo">
+					<img src="./images/icon-star.svg" alt="icon-star" />
+				</div>
+
+				<h1>How did we do?</h1>
+				<p>
+					How did we do? Please let us know how we did with your
+					support request. All feedback is appreciated to help us
+					improve our offering!
+				</p>
+
+				<div class="card-ratings">
+					<button class="ratings-btn" data-id="1">1</button>
+					<button class="ratings-btn" data-id="2">2</button>
+					<button class="ratings-btn" data-id="3">3</button>
+					<button class="ratings-btn" data-id="4">4</button>
+					<button class="ratings-btn" data-id="5">5</button>
+				</div>
+
+				<button class="card-submit-btn">Submit</button>
 			</div>
-			<h2>How did we do?</h2>
-			<p>
-				How did we do? Please let us know how we did with your support
-				request. All feedback is appreciated to help us improve our
-				offering!
-			</p>
-			<div class="card-ratings">
-				<button class="ratings-btn" data-id="1">1</button>
-				<button class="ratings-btn" data-id="2">2</button>
-				<button class="ratings-btn" data-id="3">3</button>
-				<button class="ratings-btn" data-id="4">4</button>
-				<button class="ratings-btn" data-id="5">5</button>
+		</main>
+
+		<footer role="contentinfo">
+			<div class="attribution">
+				Challenge by
+				<a
+					href="https://www.frontendmentor.io?ref=challenge"
+					target="_blank"
+					>Frontend Mentor</a
+				>. Coded by
+				<a href="https://www.frontendmentor.io/profile/M1RAK"
+					>Abdullahi Ismail</a
+				>.
 			</div>
-			<button class="card-submit-btn">Submit</button>
-		</div>
-		<div class="attribution">
-			Challenge by
-			<a
-				href="https://www.frontendmentor.io?ref=challenge"
-				target="_blank"
-				>Frontend Mentor</a
-			>. Coded by
-			<a href="https://www.frontendmentor.io/profile/M1RAK"
-				>Abdullahi Ismail</a
-			>.
-		</div>
+		</footer>
 	</body>
 </html>
