--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -12,52 +12,60 @@
 		<title>Frontend Mentor | NFT preview card component</title>
 	</head>
 	<body>
-		<div class="card">
-			<div class="card-header">
-				<img
-					src="./images/image-equilibrium.jpg"
-					alt="image-equilibrium" />
-				<div class="overlay">
-					<img src="./images/icon-view.svg" alt="icon-view" />
+		<main role="main">
+			<div class="card">
+				<div class="card-header">
+					<img
+						src="./images/image-equilibrium.jpg"
+						alt="image-equilibrium" />
+					<div class="overlay">
+						<img src="./images/icon-view.svg" alt="icon-view" />
+					</div>
 				</div>
-			</div>
 
-			<div class="card-body">
-				<h3 class="card-title">Equilibrium #3429</h3>
-				<p class="card-text">
-					Our Equilibrium collection promotes balance and calm.
-				</p>
-				<div class="card-meta">
-					<span class="card-price">
+				<div class="card-body">
+					<h3 class="card-title">Equilibrium #3429</h3>
+					<p class="card-text">
+						Our Equilibrium collection promotes balance and calm.
+					</p>
+					<div class="card-meta">
+						<span class="card-price">
+							<img
+								src="./images/icon-ethereum.svg"
+								alt="icon-ethereum" />
+							<p>0.041 ETH</p></span
+						>
+						<span class="card-time"
+							><img
+								src="./images/icon-clock.svg"
+								alt="icon-clock" />
+							<p>3 days left</p></span
+						>
+					</div>
+				</div>
+
+				<div class="card-footer">
+					<div class="avatar">
 						<img
-							src="./images/icon-ethereum.svg"
-							alt="icon-ethereum" />
-						<p>0.041 ETH</p></span
-					>
-					<span class="card-time"
-						><img src="./images/icon-clock.svg" alt="icon-clock" />
-						<p>3 days left</p></span
-					>
+							src="./images/image-avatar.png"
+							alt="image-avatar" />
+					</div>
+					<p>Creation of <a href="#">Jules Wyvern</a></p>
 				</div>
 			</div>
-
-			<div class="card-footer">
-				<div class="avatar">
-					<img src="./images/image-avatar.png" alt="image-avatar" />
-				</div>
-				<p>Creation of <a href="#">Jules Wyvern</a></p>
+		</main>
+		<footer role="contentinfo">
+			<div class="attribution">
+				Challenge by
+				<a
+					href="https://www.frontendmentor.io?ref=challenge"
+					target="_blank"
+					>Frontend Mentor</a
+				>. Coded by
+				<a href="https://www.frontendmentor.io/profile/M1RAK"
+					>Abdullahi Ismail</a
+				>.
 			</div>
-		</div>
-		<div class="attribution">
-			Challenge by
-			<a
-				href="https://www.frontendmentor.io?ref=challenge"
-				target="_blank"
-				>Frontend Mentor</a
-			>. Coded by
-			<a href="https://www.frontendmentor.io/profile/M1RAK"
-				>Abdullahi Ismail</a
-			>.
-		</div>
+		</footer>
 	</body>
 </html>
