--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -12,46 +12,52 @@
 		<title>Frontend Mentor | Order summary card</title>
 	</head>
 	<body>
-		<div class="card">
-			<div class="card-header">
-				<img
-					src="./images/illustration-hero.svg"
-					alt="illustration-hero" />
-			</div>
-
-			<div class="card-body">
-				<h2 class="card-title">Order Summary</h2>
-				<p class="card-text">
-					You can now listen to millions of songs, audiobooks, and
-					podcasts on any device anywhere you like!
-				</p>
-
-				<div class="card-plan">
-					<img src="./images/icon-music.svg" alt="icon-music" />
-
-					<div class="card-plan--type">
-						<h4>Annual Plan</h4>
-						<p>$59.99/year</p>
-					</div>
-					<a href="#" class="card-plan-link">Change</a>
+		<main role="main">
+			<div class="card">
+				<div class="card-header">
+					<img
+						src="./images/illustration-hero.svg"
+						alt="illustration-hero" />
 				</div>
 
-				<button class="card-btn card-btn--proceed">
-					Proceed to Payment</button
-				><button class="card-btn card-btn--cancel">Cancel Order</button>
-			</div>
-		</div>
+				<div class="card-body">
+					<h2 class="card-title">Order Summary</h2>
+					<p class="card-text">
+						You can now listen to millions of songs, audiobooks, and
+						podcasts on any device anywhere you like!
+					</p>
 
-		<div class="attribution">
-			Challenge by
-			<a
-				href="https://www.frontendmentor.io?ref=challenge"
-				target="_blank"
-				>Frontend Mentor</a
-			>. Coded by
-			<a href="https://www.frontendmentor.io/profile/M1RAK"
-				>Abdullahi Ismail</a
-			>.
-		</div>
+					<div class="card-plan">
+						<img src="./images/icon-music.svg" alt="icon-music" />
+
+						<div class="card-plan--type">
+							<h4>Annual Plan</h4>
+							<p>$59.99/year</p>
+						</div>
+						<a href="#" class="card-plan-link">Change</a>
+					</div>
+
+					<button class="card-btn card-btn--proceed">
+						Proceed to Payment</button
+					><button class="card-btn card-btn--cancel">
+						Cancel Order
+					</button>
+				</div>
+			</div>
+		</main>
+
+		<footer role="contentinfo">
+			<div class="attribution">
+				Challenge by
+				<a
+					href="https://www.frontendmentor.io?ref=challenge"
+					target="_blank"
+					>Frontend Mentor</a
+				>. Coded by
+				<a href="https://www.frontendmentor.io/profile/M1RAK"
+					>Abdullahi Ismail</a
+				>.
+			</div>
+		</footer>
 	</body>
 </html>
