--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -12,45 +12,53 @@
 		<title>Frontend Mentor | Product preview card component</title>
 	</head>
 	<body>
-		<div class="card">
-			<div class="card-right"></div>
-			<div class="card-left">
-				<p class="card-tag montserrat-regular">Perfume</p>
-				<h2 class="card-title fraunces-header">
-					Gabrielle Essence Eau De Parfum
-				</h2>
+		<main role="main">
+			<div class="card">
+				<div class="card-right"></div>
 
-				<div class="card-desc montserrat-regular">
-					<p>
-						A floral, solar and voluptuous interpretation composed
-						by Olivier Polge, Perfumer-Creator for the House of
-						CHANEL.
-					</p>
+				<div class="card-left">
+					<p class="card-tag montserrat-regular">Perfume</p>
+					<h2 class="card-title fraunces-header">
+						Gabrielle Essence Eau De Parfum
+					</h2>
+
+					<div class="card-desc montserrat-regular">
+						<p>
+							A floral, solar and voluptuous interpretation
+							composed by Olivier Polge, Perfumer-Creator for the
+							House of CHANEL.
+						</p>
+					</div>
+
+					<div class="card-price">
+						<h3 class="class-price--discounted fraunces-header">
+							$149.99
+						</h3>
+						<span class="class-price"
+							><strike>$169.99</strike></span
+						>
+					</div>
+
+					<button class="card-btn montserrat-bold">
+						<img src="./images/icon-cart.svg" alt="icon-cart" />
+						Add to Cart
+					</button>
 				</div>
-
-				<div class="card-price">
-					<h3 class="class-price--discounted fraunces-header">
-						$149.99
-					</h3>
-					<span class="class-price"><strike>$169.99</strike></span>
-				</div>
-
-				<button class="card-btn montserrat-bold">
-					<img src="./images/icon-cart.svg" alt="icon-cart" />
-					Add to Cart
-				</button>
 			</div>
-		</div>
-		<div class="attribution fraunces-header">
-			Challenge by
-			<a
-				href="https://www.frontendmentor.io?ref=challenge"
-				target="_blank"
-				>Frontend Mentor</a
-			>. Coded by
-			<a href="https://www.frontendmentor.io/profile/M1RAK"
-				>Abdullahi Ismail</a
-			>.
-		</div>
+		</main>
+
+		<footer role="contentinfo">
+			<div class="attribution fraunces-header">
+				Challenge by
+				<a
+					href="https://www.frontendmentor.io?ref=challenge"
+					target="_blank"
+					>Frontend Mentor</a
+				>. Coded by
+				<a href="https://www.frontendmentor.io/profile/M1RAK"
+					>Abdullahi Ismail</a
+				>.
+			</div>
+		</footer>
 	</body>
 </html>
