--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -12,29 +12,34 @@
 		<title>Frontend Mentor | QR code component</title>
 	</head>
 	<body>
-		<div class="card">
-			<div class="card-header">
-				<img src="./images/image-qr-code.png" alt="image-qr-code" />
-			</div>
-			<div class="card-body">
-				<h3>Improve your front-end skills by building projects</h3>
-				<p>
-					Scan the QR code to visit Frontend Mentor and take your
-					coding skills to the next level.
-				</p>
-			</div>
-		</div>
+		<main role="main">
+			<div class="card">
+				<div class="card-header">
+					<img src="./images/image-qr-code.png" alt="image-qr-code" />
+				</div>
 
-		<div class="attribution">
-			Challenge by
-			<a
-				href="https://www.frontendmentor.io?ref=challenge"
-				target="_blank"
-				>Frontend Mentor</a
-			>. Coded by
-			<a href="https://www.frontendmentor.io/profile/M1RAK"
-				>Abdullahi Ismail</a
-			>.
-		</div>
+				<div class="card-body">
+					<h3>Improve your front-end skills by building projects</h3>
+					<p>
+						Scan the QR code to visit Frontend Mentor and take your
+						coding skills to the next level.
+					</p>
+				</div>
+			</div>
+		</main>
+
+		<footer role="contentinfo">
+			<div class="attribution">
+				Challenge by
+				<a
+					href="https://www.frontendmentor.io?ref=challenge"
+					target="_blank"
+					>Frontend Mentor</a
+				>. Coded by
+				<a href="https://www.frontendmentor.io/profile/M1RAK"
+					>Abdullahi Ismail</a
+				>.
+			</div>
+		</footer>
 	</body>
 </html>
