--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -12,22 +12,22 @@
 		<title>Frontend Mentor | Recipe page</title>
 	</head>
 	<body>
-		<main>
+		<main role="main">
 			<!-- Header -->
-			<header>
+			<div class="header" role="banner">
 				<div class="hero-image">
 					<img
 						src="./assets/images/image-omelette.jpeg"
 						alt="image-omelette" />
 				</div>
-				<h2>Simple Omelette Recipe</h2>
+				<h1>Simple Omelette Recipe</h1>
 				<p>
 					An easy and quick dish, perfect for any meal. This classic
 					omelette combines beaten eggs cooked to perfection,
 					optionally filled with your choice of cheese, vegetables, or
 					meats.
 				</p>
-			</header>
+			</div>
 
 			<!-- Preparation -->
 			<div class="preparation">
@@ -106,7 +106,7 @@
 						<span class="nutrition-key">Calories</span>
 						<span class="nutrition-value">277kcal</span>
 					</div>
-					
+
 					<div class="nutrition-class">
 						<span class="nutrition-key">Carbs</span>
 						<span class="nutrition-value">0g</span>
@@ -121,21 +121,22 @@
 						<span class="nutrition-key">Fat</span>
 						<span class="nutrition-value">22g</span>
 					</div>
-
 				</div>
 			</div>
 		</main>
 
-		<div class="attribution">
-			Challenge by
-			<a
-				href="https://www.frontendmentor.io?ref=challenge"
-				target="_blank"
-				>Frontend Mentor</a
-			>. Coded by
-			<a href="https://www.frontendmentor.io/profile/M1RAK"
-				>Abdullahi Ismail</a
-			>.
-		</div>
+		<footer role="contentinfo">
+			<div class="attribution">
+				Challenge by
+				<a
+					href="https://www.frontendmentor.io?ref=challenge"
+					target="_blank"
+					>Frontend Mentor</a
+				>. Coded by
+				<a href="https://www.frontendmentor.io/profile/M1RAK"
+					>Abdullahi Ismail</a
+				>.
+			</div>
+		</footer>
 	</body>
 </html>
