--- a/results-summary-component-main/index.html
+++ b/results-summary-component-main/index.html
@@ -12,38 +12,41 @@
 		<title>Frontend Mentor | Results summary component</title>
 	</head>
 	<body>
-		<main>
-			<div class="result-container">
-				<div class="result-container--left">
-					<p>Your Result</p>
-					<div class="result-percentage">
-						<h2>76</h2>
-						of 100
+		<main class="flex" role="main">
+			<div class="card">
+				<div class="card-left flex-col">
+					<h3>Your Result</h3>
+					<div class="circle">
+						<h1>76</h1>
+						<span>of 100</span>
 					</div>
-					<h3>Great</h3>
+					<h2>Great</h2>
 					<p>
 						You scored higher than 65% of the people who have taken
 						these tests.
 					</p>
 				</div>
-				<div class="result-container--right">
+				<div class="card-right flex-col">
 					<h3>Summary</h3>
-					<div class="summary-list"></div>
+					<div class="stats-list"></div>
 					<button>Continue</button>
 				</div>
 			</div>
 		</main>
-		<div class="attribution">
-			Challenge by
-			<a
-				href="https://www.frontendmentor.io?ref=challenge"
-				target="_blank"
-				>Frontend Mentor</a
-			>. Coded by
-			<a href="https://www.frontendmentor.io/profile/M1RAK"
-				>Abdullahi Ismail</a
-			>.
-		</div>
+
+		<footer role="contentinfo">
+			<div class="attribution">
+				Challenge by
+				<a
+					href="https://www.frontendmentor.io?ref=challenge"
+					target="_blank"
+					>Frontend Mentor</a
+				>. Coded by
+				<a href="https://www.frontendmentor.io/profile/M1RAK"
+					>Abdullahi Ismail</a
+				>.
+			</div>
+		</footer>
 		<script src="./js/app.js"></script>
 	</body>
 </html>
