--- a/social-links-profile-main/index.html
+++ b/social-links-profile-main/index.html
@@ -12,32 +12,39 @@
 		<title>Frontend Mentor | Social links profile</title>
 	</head>
 	<body>
-		<main>
-			<header>
-				<div class="avatar">
+		<main role="main">
+			<div class="card">
+				<div class="card-avatar">
 					<img
 						src="./assets/images/avatar-jessica.jpeg"
 						alt="avatar-jessica" />
 				</div>
-				<h2>Jessica Randall</h2>
-				<h3>London, United Kingdom</h3>
-				<p>"Front-end developer and avid reader."</p>
-			</header>
-			<div class="links-container">
-				<a href="#" class="link">GitHub </a>
-				<a href="#" class="link">Frontend Mentor</a>
-				<a href="#" class="link">LinkedIn</a>
-				<a href="#" class="link">Twitter</a>
-				<a href="#" class="link">Instagram</a>
+				<div class="card-meta">
+					<h1>Jessica Randall</h1>
+					<h3>London, United Kingdom</h3>
+					<p>"Front-end developer and avid reader."</p>
+				</div>
+				<div class="card-links-container">
+					<a href="#" class="card-link">GitHub </a>
+					<a href="#" class="card-link">Frontend Mentor</a>
+					<a href="#" class="card-link">LinkedIn</a>
+					<a href="#" class="card-link">Twitter</a>
+					<a href="#" class="card-link">Instagram</a>
+				</div>
 			</div>
 		</main>
-		<div class="attribution">
-			Challenge by
-			<a
-				href="https://www.frontendmentor.io?ref=challenge"
-				target="_blank"
-				>Frontend Mentor</a
-			>. Coded by <a href="https://www.frontendmentor.io/profile/M1RAK">Abdullahi Ismail</a>.
-		</div>
+		<footer role="contentinfo">
+			<div class="attribution">
+				Challenge by
+				<a
+					href="https://www.frontendmentor.io?ref=challenge"
+					target="_blank"
+					>Frontend Mentor</a
+				>. Coded by
+				<a href="https://www.frontendmentor.io/profile/M1RAK"
+					>Abdullahi Ismail</a
+				>.
+			</div>
+		</footer>
 	</body>
 </html>
