--- a/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/index.html
@@ -12,53 +12,57 @@
 		<title>Frontend Mentor | Stats preview card component</title>
 	</head>
 	<body>
-		<div class="card">
-			<div class="card-right">
-				<h2 class="card-title">
-					Get <span>insights</span> that help your business grow.
-				</h2>
-				<p class="card-text">
-					Discover the benefits of data analytics and make better
-					decisions regarding revenue, customer experience, and
-					overall efficiency.
-				</p>
-				<div class="card-meta">
-					<div>
-						<h3>10k+</h3>
-						<small>companies</small>
-					</div>
-					<div>
-						<h3>314</h3>
-						<small>templates</small>
-					</div>
-					<div>
-						<h3>12m+</h3>
-						<small>queries</small>
+		<main role="main">
+			<div class="card">
+				<div class="card-right">
+					<h1 class="card-title">
+						Get <span>insights</span> that help your business grow.
+					</h1>
+					<p class="card-text">
+						Discover the benefits of data analytics and make better
+						decisions regarding revenue, customer experience, and
+						overall efficiency.
+					</p>
+					<div class="card-meta">
+						<div>
+							<h3>10k+</h3>
+							<small>companies</small>
+						</div>
+						<div>
+							<h3>314</h3>
+							<small>templates</small>
+						</div>
+						<div>
+							<h3>12m+</h3>
+							<small>queries</small>
+						</div>
 					</div>
 				</div>
+				<div class="card-left">
+					<div class="overlay"></div>
+					<picture>
+						<source
+							media="(max-width:375px)"
+							srcset="./images/image-header-mobile.jpg" />
+						<img
+							src="./images/image-header-desktop.jpg"
+							alt="image-header-desktop" />
+					</picture>
+				</div>
 			</div>
-			<div class="card-left">
-				<div class="overlay"></div>
-				<picture>
-					<source
-						media="(max-width:375px)"
-						srcset="./images/image-header-mobile.jpg" />
-					<img
-						src="./images/image-header-desktop.jpg"
-						alt="image-header-desktop" />
-				</picture>
+		</main>
+		<footer role="contentinfo">
+			<div class="attribution">
+				Challenge by
+				<a
+					href="https://www.frontendmentor.io?ref=challenge"
+					target="_blank"
+					>Frontend Mentor</a
+				>. Coded by
+				<a href="https://www.frontendmentor.io/profile/M1RAK"
+					>Abdullahi Ismail</a
+				>.
 			</div>
-		</div>
-		<div class="attribution">
-			Challenge by
-			<a
-				href="https://www.frontendmentor.io?ref=challenge"
-				target="_blank"
-				>Frontend Mentor</a
-			>. Coded by
-			<a href="https://www.frontendmentor.io/profile/M1RAK"
-				>Abdullahi Ismail</a
-			>.
-		</div>
+		</footer>
 	</body>
 </html>
